# yijinc-framework

./: .clang-format  .gitignore  CMakeLists.txt  README.md
resources/: log4cplus.properties
sh/: rest_test.sh
src/: beast_http.cpp  beast_http.hpp  cipher.cpp  cipher.hpp  curl_http.hpp  i_http.hpp  logger.hpp  main.cpp  wss.hpp
src/common/: Cipher.cpp  Cipher.h  Logger.h  cipher.cpp  cipher.hpp  logger.h  logger.hpp  logger_macro.h
src/exception/: YijincException.cpp  YijincException.h  yijinc_exception.cpp  yijinc_exception.h
src/http/: BeastHttp.cpp  BeastHttp.h  IHttp.h  beast_http.cpp  beast_http.h  beast_http.hpp  curl_http.h  i_http.h  i_http.hpp
src/opencv/: OpencvApp.cpp  OpencvApp.h
src/wss/: BeastWssContext.cpp  BeastWssContext.h  IWss.h  UWebsocketsContext.cpp  UWebsocketsContext.h  beast_wss_context.cpp  beast_wss_context.h  i_wss.h  i_wss_context.h  wss.hpp
test/: CMakeLists.txt  test  test.cpp
